# TX-Tradutor-em-REALTIME

./: .gitignore  APRESENTACAO_TECNICA_COMPLETA.md  ARCHITECTURE.md  LICENSE  README.md  baixar_opus_pt_en.bat  compilar_rust.bat  criar_atalhos.ps1  diagnostico.bat  diagnostico.py  gerenciar_contexto.py  instalar.bat  listar_dispositivos.bat  pyproject.toml  realtime_translator.py  requirements.txt  rodar.bat  test_context_manager.py  test_text_processing.py  texto_bridge.py
.github/workflows/: ci.yml  release.yml
docs/: RFC-001-performance-roadmap.md
rtxlator/: __init__.py  audio_io.py  audio_rs.py  audio_utils.py  cache.py  circuit_breaker.py  constants.py  context_store.py  cuda_setup.py  device.py  display.py  latency_profile.py  opus_translator.py  overlay.py  pipeline.py  pipeline_bridge.py  result.py  source_profiles.py  text_bridge.py  text_processing.py  translator.py
runtime-rs/: Cargo.toml
runtime-rs/audio/: Cargo.toml
runtime-rs/audio/src/: device_enum.rs  lib.rs  loopback_capture.rs  wasapi_capture.rs
runtime-rs/dsp/: Cargo.toml
runtime-rs/dsp/src/: gain.rs  lib.rs  mono.rs  resample.rs  segmenter.rs  vad_stage1.rs
runtime-rs/ffi/: Cargo.toml
runtime-rs/ffi/src/: lib.rs
runtime-rs/sched/: Cargo.toml
runtime-rs/sched/src/: deadlines.rs  lib.rs  priorities.rs  queues.rs  ring.rs
tests/: test_cache.py  test_circuit_breaker.py  test_integration.py  test_opus_translator.py  test_realtime_translator.py  test_source_profiles.py
